--- a/vrising/deployment.yaml
+++ b/vrising/deployment.yaml
@@ -11,48 +11,48 @@ spec:
     metadata:
       labels:
         app.kubernetes.io/name: vrising-server
-  containers:
-  - name: vrising-server
-    image: trueosiris/vrising
-    ports:
-    - name: vrising01
-      containerPort: 9876
-      protocol: UDP
-    - name: vrising02
-      containerPort: 9877
-      Protocol: UDP
-    resources:
-      limits:
-        memory: "6Gi"
-        cpu: "4000m"
-      requests: 
-        memory: 4Gi
-        cpu: "2000m"
-    volumeMounts:
-      - mountPath: /mnt/vrising/server
-        name: vrising-server
-      - mountPath: /mnt/vrising/persistentdata
-        name: vrising-persistentdata
-      - mountPath: /mnt/vrising/persistentdata/Settings/ServerGameSettings.json
-        name: vrising-servergamesettings
-      - mountPath: /mnt/vrising/persistentdata/Settings/ServerHostSettings.json
-        name: vrising-servergostsettings
-      - mountPath: /mnt/vrising/persistentdata/Settings/banlist.txt
-        name: vrising-banlist
-  volumes:
-    - name: vrising-server
-      persistentVolumeClaim:
-        claimName: vrising-server-pvc
-    - name: vrising-persistentdata
-      persistentVolumeClaim:
-        claimName: vrising-persistentdata-pvc
-    - name: vrising-serverhostsettings
-      configMap:
-        name: script-exporter-config
-    - name: vrising-servergamesettings
-      configMap:
-        name: vrising-servergamesettings
-    - name: vrising-banlist
-      configMap:
-        name: vrising-banlist
-        
+    spec:
+      containers:
+      - name: vrising-server
+        image: trueosiris/vrising
+        ports:
+        - name: vrising01
+          containerPort: 9876
+          protocol: UDP
+        - name: vrising02
+          containerPort: 9877
+          Protocol: UDP
+        resources:
+          limits:
+            memory: "6Gi"
+            cpu: "4000m"
+          requests: 
+            memory: 4Gi
+            cpu: "2000m"
+        volumeMounts:
+          - mountPath: /mnt/vrising/server
+            name: vrising-server
+          - mountPath: /mnt/vrising/persistentdata
+            name: vrising-persistentdata
+          - mountPath: /mnt/vrising/persistentdata/Settings/ServerGameSettings.json
+            name: vrising-servergamesettings
+          - mountPath: /mnt/vrising/persistentdata/Settings/ServerHostSettings.json
+            name: vrising-servergostsettings
+          - mountPath: /mnt/vrising/persistentdata/Settings/banlist.txt
+            name: vrising-banlist
+      volumes:
+        - name: vrising-server
+          persistentVolumeClaim:
+            claimName: vrising-server-pvc
+        - name: vrising-persistentdata
+          persistentVolumeClaim:
+            claimName: vrising-persistentdata-pvc
+        - name: vrising-serverhostsettings
+          configMap:
+            name: script-exporter-config
+        - name: vrising-servergamesettings
+          configMap:
+            name: vrising-servergamesettings
+        - name: vrising-banlist
+          configMap:
+            name: vrising-banlist
