--- a/vrising/deployment.yaml
+++ b/vrising/deployment.yaml
@@ -49,7 +49,7 @@ spec:
             claimName: vrising-persistentdata-pvc
         - name: vrising-serverhostsettings
           configMap:
-            name: script-exporter-config
+            name: vrising-servergamesettings
         - name: vrising-servergamesettings
           configMap:
             name: vrising-servergamesettings
