--- a/vrising/configmap/ServerHostSettings.json
+++ b/vrising/configmap/ServerHostSettings.json
@@ -1,10 +1,10 @@
 {
     "Name": "Lenin's House of Pain",
-    "Description": "",
+    "Description": "The house of pain, of Lenin",
     "Port": 9876,
     "QueryPort": 9877,
     "MaxConnectedUsers": 6,
-    "MaxConnectedAdmins": 4,
+    "MaxConnectedAdmins": 1,
     "ServerFps": 30,
     "SaveName": "world1",
     "Password": "",
@@ -12,7 +12,7 @@
     "ListOnSteam": true,
     "ListOnEOS": false,
     "AutoSaveCount": 20,
-    "AutoSaveInterval": 120,
+    "AutoSaveInterval": 600,
     "CompressSaveFiles": true,
     "GameSettingsPreset": "",
     "GameDifficultyPreset": "",
