--- a/vrising/configmap/ServerHostSettings.json
+++ b/vrising/configmap/ServerHostSettings.json
@@ -1,5 +1,5 @@
 {
-    "Name": "Lenin's House of Pain",
+    "Name": "Lenins House of Pain",
     "Description": "The house of pain, of Lenin",
     "Port": 9876,
     "QueryPort": 9877,
