more indent fixes

--- a/vrising/configmap/ServerHostSettings.json
+++ b/vrising/configmap/ServerHostSettings.json
@@ -1,29 +1,29 @@
 {
-    "Name": "Lenins House of Pain",
-    "Description": "The house of pain, of Lenin",
-    "Port": 9876,
-    "QueryPort": 9877,
-    "MaxConnectedUsers": 6,
-    "MaxConnectedAdmins": 1,
-    "ServerFps": 30,
-    "SaveName": "world1",
-    "Password": "",
-    "Secure": true,
-    "ListOnSteam": true,
-    "ListOnEOS": true,
-    "AutoSaveCount": 20,
-    "AutoSaveInterval": 600,
-    "CompressSaveFiles": true,
-    "GameSettingsPreset": "",
-    "GameDifficultyPreset": "",
-    "AdminOnlyDebugEvents": true,
-    "DisableDebugEvents": false,
-    "API": {
-      "Enabled": false
-    },
-    "Rcon": {
-      "Enabled": false,
-      "Port": 25575,
-      "Password": ""
-    }
+  "Name": "Lenins House of Pain",
+  "Description": "The house of pain, of Lenin",
+  "Port": 9876,
+  "QueryPort": 9877,
+  "MaxConnectedUsers": 40,
+  "MaxConnectedAdmins": 4,
+  "ServerFps": 30,
+  "SaveName": "world1",
+  "Password": "",
+  "Secure": true,
+  "ListOnSteam": false,
+  "ListOnEOS": false,
+  "AutoSaveCount": 20,
+  "AutoSaveInterval": 120,
+  "CompressSaveFiles": true,
+  "GameSettingsPreset": "",
+  "GameDifficultyPreset": "",
+  "AdminOnlyDebugEvents": true,
+  "DisableDebugEvents": false,
+  "API": {
+    "Enabled": false
+  },
+  "Rcon": {
+    "Enabled": false,
+    "Port": 25575,
+    "Password": ""
   }
+}
