--- a/vrising/configmap/ServerHostSettings.json
+++ b/vrising/configmap/ServerHostSettings.json
@@ -9,8 +9,8 @@
   "SaveName": "world1",
   "Password": "",
   "Secure": true,
-  "ListOnSteam": false,
-  "ListOnEOS": false,
+  "ListOnSteam": true,
+  "ListOnEOS": true,
   "AutoSaveCount": 20,
   "AutoSaveInterval": 120,
   "CompressSaveFiles": true,
