--- a/vrising/configmap/ServerGameSettings.json
+++ b/vrising/configmap/ServerGameSettings.json
@@ -7,7 +7,7 @@
   "CastleHeartDamageMode": "CanBeDestroyedByPlayers",
   "PvPProtectionMode": "Medium",
   "DeathContainerPermission": "Anyone",
-  "RelicSpawnType": "Unique",
+  "RelicSpawnType": "Plentiful  ",
   "CanLootEnemyContainers": true,
   "BloodBoundEquipment": true,
   "TeleportBoundItems": true,
@@ -34,7 +34,7 @@
   "JournalVBloodSourceUnitMaxDistance": 25.0,
   "PvPVampireRespawnModifier": 1.0,
   "CastleMinimumDistanceInFloors": 2,
-  "ClanSize": 4,
+  "ClanSize": 6,
   "BloodDrainModifier": 1.0,
   "DurabilityDrainModifier": 1.0,
   "GarlicAreaStrengthModifier": 1.0,
