adjust some settings

--- a/vrising/configmap/ServerGameSettings.json
+++ b/vrising/configmap/ServerGameSettings.json
@@ -4,11 +4,11 @@
   "CastleDamageMode": "Never",
   "SiegeWeaponHealth": "Normal",
   "PlayerDamageMode": "Always",
-  "CastleHeartDamageMode": "CanBeDestroyedByPlayers",
+  "CastleHeartDamageMode": "CanBeDestroyedOnlyWhenDecaying",
   "PvPProtectionMode": "Medium",
-  "DeathContainerPermission": "Anyone",
+  "DeathContainerPermission": "ClanMembers",
   "RelicSpawnType": "Plentiful  ",
-  "CanLootEnemyContainers": true,
+  "CanLootEnemyContainers": false,
   "BloodBoundEquipment": true,
   "TeleportBoundItems": true,
   "BatBoundItems": false,
@@ -50,7 +50,7 @@
   "CastleExposedFreeClaimTimer": 300.0,
   "CastleRelocationCooldown": 10800.0,
   "CastleRelocationEnabled": true,
-  "AnnounceSiegeWeaponSpawn": true,
+  "AnnounceSiegeWeaponSpawn": false,
   "ShowSiegeWeaponMapIcon": false,
   "BuildCostModifier": 1.0,
   "RecipeCostModifier": 1.0,
@@ -62,7 +62,7 @@
   "DismantleResourceModifier": 1.0,
   "ServantConvertRateModifier": 1.0,
   "RepairCostModifier": 1.0,
-  "Death_DurabilityFactorLoss": 0.125,
+  "Death_DurabilityFactorLoss": 0.0,
   "Death_DurabilityLossFactorAsResources": 1.0,
   "StarterEquipmentId": 0,
   "StarterResourcesId": 0,
