--- a/monitoring/exporters/proxmox-exporter/deployment.yaml
+++ b/monitoring/exporters/proxmox-exporter/deployment.yaml
@@ -29,6 +29,9 @@ spec:
           requests:
             cpu: 100m
             memory: 50Mi
+          env:
+          - name: --config.file
+            value: /etc/prometheus/pve.yml
       restartPolicy: Always
       volumes:
       - name: proxmox-exporter-conf
