--- a/webservers/kustomization.yaml
+++ b/webservers/kustomization.yaml
@@ -2,10 +2,17 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - middlewares/middlewares.yaml
+
   - pravda/deployment.yaml
   - pravda/services.yaml
   - pravda/ingressroute.yaml
   - pravda/certificate.yaml
+
+  - gunvor/deployment.yaml
+  - gunvor/services.yaml
+  - gunvor/ingressroute.yaml
+  - gunvor/certificate.yaml
+
 configMapGenerator:
   - name: html-pravda-index
     files:
