--- a/rook-ceph/base/common.yaml
+++ b/rook-ceph/base/common.yaml
@@ -875,6 +875,7 @@ rules:
       - cronjobs
     verbs:
       - delete
+      - deletecollection
   - apiGroups:
       - cert-manager.io
     resources:
