--- a/rook-ceph/kustomization.yaml
+++ b/rook-ceph/kustomization.yaml
@@ -12,4 +12,4 @@ resources:
   - service/ingressroute.yaml
   - service/middleware.yaml
   - service/certificate.yaml
-  - addons/serviceaccount.yaml
+#  - addons/serviceaccount.yaml
