--- a/rook-ceph/service/certificate.yaml
+++ b/rook-ceph/service/certificate.yaml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata: 
-  name: ceph-k8s-lenin-nu
+  name: cert-ceph-k8s-lenin-nu
 spec:
   dnsNames:
     - "ceph.k8s.lenin.nu"
