try without the cert..

--- a/rook-ceph/service/ingressroute.yaml
+++ b/rook-ceph/service/ingressroute.yaml
@@ -9,7 +9,7 @@ spec:
     - match: Host(`ceph.k8s.lenin.nu`)
       kind: Rule
       middlewares:
-      - name: httpsredirect
+#      - name: httpsredirect
       - name: ipwhitelist-privnets
       services:
       - name: rook-ceph-mgr-dashboard
