--- a/rook-ceph/service/ingressroute.yaml
+++ b/rook-ceph/service/ingressroute.yaml
@@ -1,4 +1,4 @@
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: cephdash-http
@@ -9,13 +9,13 @@ spec:
     - match: Host(`ceph.k8s.lenin.nu`)
       kind: Rule
       middlewares:
-#      - name: httpsredirect
+      - name: httpsredirect
       - name: ipwhitelist-privnets
       services:
       - name: rook-ceph-mgr-dashboard
         port: 8080
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: cephdash-https
