--- a/rook-ceph/service/ingressroute.yaml
+++ b/rook-ceph/service/ingressroute.yaml
@@ -14,6 +14,7 @@ spec:
       services:
       - name: rook-ceph-mgr-dashboard
         port: 8080
+        namespace: rook-ceph
 ---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
@@ -32,3 +33,4 @@ spec:
     services:
     - name: rook-ceph-mgr-dashboard
       port: 8080
+      namespace: rook-ceph
