--- a/webservers/gunvor/certificate.yaml
+++ b/webservers/gunvor/certificate.yaml
@@ -1,11 +1,11 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata: 
-  name: cert-gunvor-lenin-nu
+  name: cert-gunvor-lindblad.net
 spec:
   dnsNames:
-    - "gunvor.lenin.nu"
-  secretName: secret-gunvor-lenin-nu
+    - "gunvor.lindblad.net"
+  secretName: secret-gunvor-lindblad.net
   issuerRef:
     name: letsencrypt-prod
     kind: ClusterIssuer
