--- a/prometheus/deployment.yaml
+++ b/prometheus/deployment.yaml
@@ -146,7 +146,7 @@ spec:
               cpu: 100m
               memory: 10Mi
             limits:
-              cpu: 1
+              cpu: 10m
               memory: 200Mi
           envFrom:
           - configMapRef:
