--- a/rook-ceph/service/middleware.yaml
+++ b/rook-ceph/service/middleware.yaml
@@ -11,7 +11,7 @@ kind: Middleware
 metadata:
   name: ipwhitelist-privnets
 spec:
-  ipWhiteList:
+  ipAllowList:
     sourceRange:
       - 192.168.0.0/16
       - 10.0.0.0/8
