--- a/webservers/kustomization.yaml
+++ b/webservers/kustomization.yaml
@@ -13,6 +13,9 @@ resources:
   - gunvor/ingressroute.yaml
   - gunvor/certificate.yaml
 
+  - hello/deployment.yaml
+  - hello/service.yaml
+
 configMapGenerator:
   - name: html-pravda-index
     files:
