--- a/webservers/hello/ingressroute.yaml
+++ b/webservers/hello/ingressroute.yaml
@@ -11,7 +11,7 @@ spec:
 #    middlewares:
 #    - name: httpsredirect
     services:
-    - name: pravda-svc
+    - name: hello-world-svc
       port: 80
 #---
 #apiVersion: traefik.io/v1alpha1
