--- a/webservers/hello/service.yaml
+++ b/webservers/hello/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-world-service
+  name: hello-world-svc
 spec:
   selector:
     app.kubernetes.io/name: hello-world
