--- a/webservers/hello/ingressroute.yaml
+++ b/webservers/hello/ingressroute.yaml
@@ -1,31 +1,31 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: hello-world-ingress
+  name: hello-world-http
 spec:
   entryPoints:
     - web
   routes:
   - match: Host(`hello-world.k8s.lenin.nu`)
     kind: Rule
-#    middlewares:
-#    - name: httpsredirect
+    middlewares:
+    - name: httpsredirect
     services:
     - name: hello-world-svc
       port: 80
-#---
-#apiVersion: traefik.io/v1alpha1
-#kind: IngressRoute
-#metadata:
-#  name: pravda-https
-#spec:
-#  entryPoints:
-#    - websecure
-#  tls:
-#    secretName: secret-pravda-lenin-nu
-#  routes:
-#  - match: Host(`pravda.lenin.nu`)
-#    kind: Rule
-#    services:
-#    - name: pravda-svc
-#      port: 80
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: hello-world-https
+spec:
+  entryPoints:
+    - websecure
+  tls:
+    secretName: secret-hello-world-k8s-lenin-nu
+  routes:
+  - match: Host(`hello-world.k8s.lenin.nu`)
+    kind: Rule
+    services:
+    - name: hello-world-svc
+      port: 80
