--- a/grafana/deployment.yaml
+++ b/grafana/deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: grafana
-        image: grafana/grafana:11.3.0
+        image: grafana/grafana:11.3.0-security-01
         ports:
         - name: grafana
           containerPort: 3000
