--- a/velero/values.yaml
+++ b/velero/values.yaml
@@ -335,7 +335,7 @@ velero:
       accessMode: ReadWrite
       credential:
         # name of the secret used by this backupStorageLocation.
-        name: minio-credentials
+        name: cloud-credentials
         # name of key that contains the secret data to be used.
         key:  cloud
       # Additional provider-specific configuration. See link above
@@ -369,7 +369,7 @@ velero:
       provider: aws
       credential: 
         # name of the secret used by this volumeSnapshotLocation.
-        name: minio-credentials
+        name: cloud-credentials
         # name of key that contains the secret data to be used.
         key: cloud
       # Additional provider-specific configuration. See link above
@@ -506,7 +506,7 @@ velero:
     name:
     # Name of a pre-existing secret (if any) in the Velero namespace
     # that should be used to get IAM account credentials. Optional.
-    existingSecret: minio-credentials
+    existingSecret: cloud-credentials
     # Data to be stored in the Velero secret, if `useSecret` is true and `existingSecret` is empty.
     # As of the current Velero release, Velero only uses one secret key/value at a time.
     # The key must be named `cloud`, and the value corresponds to the entire content of your IAM credentials file.
