--- a/ts3bot/cronjob.yaml
+++ b/ts3bot/cronjob.yaml
@@ -45,7 +45,8 @@ kind: CronJob
 metadata:
   name: ts3bot-on-cron
 spec:
-  schedule: "0 21 * * 4"
+  schedule: "0 21 * * 4" # DST
+#  schedule: "0 20 * * 4" # NON DST
   failedJobsHistoryLimit: 1
   successfulJobsHistoryLimit: 1
   concurrencyPolicy: Forbid
@@ -68,7 +69,8 @@ kind: CronJob
 metadata:
   name: ts3bot-off-cron
 spec:
-  schedule: "0 23 * * 4"
+  schedule: "0 23 * * 4" # DST
+#  schedule: "0 22 * * 4" # NON DST
   failedJobsHistoryLimit: 1
   successfulJobsHistoryLimit: 1
   concurrencyPolicy: Forbid
