--- a/velero/values.yaml
+++ b/velero/values.yaml
@@ -96,7 +96,7 @@ velero:
     # Extra volumeMounts for the Upgrade CRDs Job. Optional.
     extraVolumeMounts: []
     # Extra key/value pairs to be used as environment variables. Optional.
-    extraEnvVars: {}
+    extraEnvVars: []
     automountServiceAccountToken: true
   
   
@@ -571,7 +571,7 @@ velero:
     extraVolumeMounts: []
   
     # Key/value pairs to be used as environment variables for the node-agent daemonset. Optional.
-    extraEnvVars: {}
+    extraEnvVars: []
   
     # Additional command-line arguments that will be passed to the node-agent. Optional.
     # e.g.: extraArgs: ["--foo=bar"]
