--- a/monitoring/exporters/node-exporter/deployment.yaml
+++ b/monitoring/exporters/node-exporter/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: node-exporter
-        image: prom/node-exporter:v1.8.2
+        image: harbor.k8s.lenin.nu/dh-mirror/prom/node-exporter:v1.8.2
         ports:
         - name: http
           containerPort: 9100
