--- a/monitoring/exporters/pgbouncer-exporter/deployment.yaml
+++ b/monitoring/exporters/pgbouncer-exporter/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: pgbouncer-exporter-01
-        image: prometheuscommunity/pgbouncer-exporter:v0.9.0
+        image: harbor.k8s.lenin.nu/dh-mirror/prometheuscommunity/pgbouncer-exporter:v0.9.0
         args: 
         - "--pgBouncer.connectionString=postgres://$(PG_USER)@192.168.103.11:6432/pgbouncer?sslmode=disable"
         ports:
