--- a/monitoring/exporters/pihole-exporter/deployment.yaml
+++ b/monitoring/exporters/pihole-exporter/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: pihole-exporter
-        image: ekofr/pihole-exporter:v0.4.0
+        image: harbor.k8s.lenin.nu/dh-mirror/ekofr/pihole-exporter:v0.4.0
         ports:
         - name: http
           containerPort: 9617
