--- a/monitoring/exporters/snmp-exporter/deployment.yaml
+++ b/monitoring/exporters/snmp-exporter/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: snmp-exporter
-        image: prom/snmp-exporter:v0.26.0
+        image: harbor.k8s.lenin.nu/dh-mirror/prom/snmp-exporter:v0.26.0
         ports:
         - name: http
           containerPort: 9116
