--- a/yopass/redis/deployment.yaml
+++ b/yopass/redis/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: yopass-redis
-        image: redis:7.4.0-alpine
+        image: https://harbor.k8s.lenin.nu/dh-mirror/redis:7.4.0-alpine
         args:
         - "--save 60 1"
         - "--loglevel warning"
