--- a/yopass/yopass/deployment.yaml
+++ b/yopass/yopass/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: yopass
-        image: https://harbor.k8s.lenin.nu/dh-mirror/jhaals/yopass:12.0.0
+        image: harbor.k8s.lenin.nu/dh-mirror/jhaals/yopass:12.0.0
         args:
           - "--database=redis"
           - "--redis=redis://yopass-redis:6379/0"
