--- a/argocd/patch/argocd-clusterrole.yaml
+++ b/argocd/patch/argocd-clusterrole.yaml
@@ -38,8 +38,14 @@ rules:
       - list
       - watch
   - apiGroups:
-    - ""
+      - ""
     resources:
-    - pods/exec
+      - pods/exec
     verbs:
-    - create
+      - create
+  - apigroups:
+      - 'batch'
+    resources:
+      - jobs
+    verbs:
+      - creae
