--- a/argocd/patch/argocd-clusterrole.yaml
+++ b/argocd/patch/argocd-clusterrole.yaml
@@ -41,6 +41,11 @@ rules:
       - ""
     resources:
       - pods/exec
+    verbs:
+      - create
+  - apiGroups:
+      - 'batch'
+    resources:
       - jobs
     verbs:
       - create
