--- a/zabbix-server/zabbix-server/deployment.yaml
+++ b/zabbix-server/zabbix-server/deployment.yaml
@@ -24,7 +24,7 @@ spec:
                 - worker-02
       containers:
       - name: zabbix-server
-        image: zabbix/zabbix-server-pgsql:7.0.18-alpine
+        image: harbor.k8s.lenin.nu/dh-mirror/zabbix/zabbix-server-pgsql:7.0.19-alpine
         ports:
         - name: zabbix-trapper
           containerPort: 10051
