--- a/zabbix-server/zabbix-web/deployment.yaml
+++ b/zabbix-server/zabbix-web/deployment.yaml
@@ -26,7 +26,7 @@ spec:
             topologyKey: "kubernetes.io/hostname"
       containers:
         - name: zabbix-web
-          image: zabbix/zabbix-web-nginx-pgsql:7.0.18-alpine
+          image: harbor.k8s.lenin.nu/dh-mirror/zabbix/zabbix-web-nginx-pgsql:7.0.19-alpine
           resources:
             limits:
               cpu: 500m
