--- a/grafana/deployment.yaml
+++ b/grafana/deployment.yaml
@@ -3,6 +3,10 @@ kind: Deployment
 metadata:
   name: grafana
   namespace: tools
+  annotations:
+    keel.sh/policy: major
+    keel.sh/trigger: poll
+    keel.sh/pollSchedule: "@every 8h"
 spec:
   replicas: 1
   selector:
