--- a/monitoring/exporters/pihole-exporter/deployment.yaml
+++ b/monitoring/exporters/pihole-exporter/deployment.yaml
@@ -2,6 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: pihole-exporter
+  annotations:
+    keel.sh/policy: major
+    keel.sh/trigger: poll
+    keel.sh/pollSchedule: "@every 8h"
 spec:
   replicas: 1
   selector:
