--- a/yopass/redis/deployment.yaml
+++ b/yopass/redis/deployment.yaml
@@ -2,6 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: yopass-redis
+  annotations:
+    keel.sh/policy: major
+    keel.sh/trigger: poll
+    keel.sh/pollSchedule: "@every 8h"
 spec:
   replicas: 1
   selector:
