--- a/prometheus/deployment.yaml
+++ b/prometheus/deployment.yaml
@@ -38,7 +38,7 @@ spec:
               memory: 500M
             limits:
               cpu: 100m
-              memory: 1Gi
+              memory: 1500Mi
           volumeMounts:
             - name: prometheus-config-volume
               mountPath: /etc/prometheus/prometheus.yml
