--- a/grafana/deployment.yaml
+++ b/grafana/deployment.yaml
@@ -11,6 +11,7 @@ metadata:
     keel.sh/monitorContainers: "^grafana"
 spec:
   replicas: 1
+  revisionHistoryLimit: 3
   selector:
     matchLabels:
       app: grafana
