--- a/grafana/deployment.yaml
+++ b/grafana/deployment.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: tools
   annotations:
 #    keel.sh/policy: major
-    keel.sh/policy: "regexp:^12.*-[0-9]*$"
-    keel.sh/trigger: poll
+    keel.sh/policy: "force"
+    keel.sh/trigger: "poll"
     keel.sh/pollSchedule: "@every 8h"
     keel.sh/monitorContainers: "^grafana"
 spec:
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
       - name: grafana
-        image: harbor.k8s.lenin.nu/dh-mirror/grafana/grafana:12.3.0-18546308611
+        image: harbor.k8s.lenin.nu/dh-mirror/grafana/grafana:latest
         ports:
         - name: grafana
           containerPort: 3000
