--- a/yopass/yopass/certificate.yaml
+++ b/yopass/yopass/certificate.yaml
@@ -7,7 +7,7 @@ spec:
     - "yopass.k8s.lenin.nu"
   secretName: secret-yopass-k8s-lenin-nu
   issuerRef:
-    name: letsencrypt-prod
+    name: letsencrypt-prod-shortlived
     kind: ClusterIssuer
   privateKey:
     rotationPolicy: Always
@@ -22,7 +22,7 @@ spec:
     - "verysecurepassword.databra007.se"
   secretName: secret--verysecurepassword-databra007-se
   issuerRef:
-    name: letsencrypt-prod
+    name: letsencrypt-prod-shortlived
     kind: ClusterIssuer
   privateKey:
     rotationPolicy: Always
