move all certs to shortlived versions

--- a/argocd/ingress/certificate.yaml
+++ b/argocd/ingress/certificate.yaml
@@ -7,7 +7,7 @@ spec:
     - "argocd.k8s.lenin.nu"
   secretName: secret-argocd-k8s-lenin-nu
   issuerRef:
-    name: letsencrypt-prod
+    name: letsencrypt-prod-shortlived
     kind: ClusterIssuer
   privateKey:
     rotationPolicy: Always
