--- a/grafana/service/certificate.yaml
+++ b/grafana/service/certificate.yaml
@@ -7,7 +7,7 @@ spec:
     - "grafana.k8s.lenin.nu"
   secretName: secret-grafana-k8s-lenin-nu
   issuerRef:
-    name: letsencrypt-prod
+    name: letsencrypt-prod-shortlived
     kind: ClusterIssuer
   privateKey:
     rotationPolicy: Always
