--- a/harbor-ingress/ingress/certificate.yaml
+++ b/harbor-ingress/ingress/certificate.yaml
@@ -7,7 +7,7 @@ spec:
     - "harbor.k8s.lenin.nu"
   secretName: secret-harbor-k8s-lenin-nu
   issuerRef:
-    name: letsencrypt-prod
+    name: letsencrypt-prod-shortlived
     kind: ClusterIssuer
   privateKey:
     rotationPolicy: Always
