--- a/grafana/deployment.yaml
+++ b/grafana/deployment.yaml
@@ -42,16 +42,16 @@ spec:
         volumeMounts:
           - mountPath: /var/lib/grafana
             name: grafana-storage
-      initContainers:
-      - name: change-ownership-container
-        image: busybox
-        command: ["/bin/chmod","-R","777", "/var/lib/grafana"]
-        securityContext:
-          runAsUser: 0
-          privileged: true
-        volumeMounts:
-          - mountPath: /var/lib/grafana
-            name: grafana-storage
+#      initContainers:
+#      - name: change-ownership-container
+#        image: busybox
+#        command: ["/bin/chmod","-R","777", "/var/lib/grafana"]
+#        securityContext:
+#          runAsUser: 0
+#          privileged: true
+#        volumeMounts:
+#          - mountPath: /var/lib/grafana
+#            name: grafana-storage
       volumes:
         - name: grafana-storage
           persistentVolumeClaim:
