--- a/grafana/service/service.yaml
+++ b/grafana/service/service.yaml
@@ -9,8 +9,6 @@ metadata:
 spec:
   selector: 
     app: grafana
-  type: NodePort  
   ports:
-    - port: 3000
-      targetPort: 3000
-      nodePort: 32000
+    - name: grafana
+      port: 3000
