--- a/grafana/deployment.yaml
+++ b/grafana/deployment.yaml
@@ -42,6 +42,8 @@ spec:
         volumeMounts:
           - mountPath: /var/lib/grafana
             name: grafana-storage
+          - mountPath: /var/lib/grafana2
+            name: grafana-storage
 #      initContainers:
 #      - name: change-ownership-container
 #        image: busybox
@@ -56,3 +58,6 @@ spec:
         - name: grafana-storage
           persistentVolumeClaim:
             claimName: grafana-storage-pvc
+        - name: grafana-storage2
+          persistentVolumeClaim:
+            claimName: grafana-storage-pvc2
