--- a/grafana/deployment.yaml
+++ b/grafana/deployment.yaml
@@ -44,16 +44,16 @@ spec:
             name: grafana-storage
           - mountPath: /var/lib/grafana2
             name: grafana-storage2
-#      initContainers:
-#      - name: change-ownership-container
-#        image: busybox
-#        command: ["/bin/chmod","-R","777", "/var/lib/grafana"]
-#        securityContext:
-#          runAsUser: 0
-#          privileged: true
-#        volumeMounts:
-#          - mountPath: /var/lib/grafana
-#            name: grafana-storage
+      initContainers:
+      - name: change-ownership-container
+        image: busybox
+        command: ["/bin/chmod","-R","777", "/var/lib/grafana2"]
+        securityContext:
+          runAsUser: 0
+          privileged: true
+        volumeMounts:
+          - mountPath: /var/lib/grafana
+            name: grafana-storage
       volumes:
         - name: grafana-storage
           persistentVolumeClaim:
