--- a/grafana/deployment.yaml
+++ b/grafana/deployment.yaml
@@ -54,6 +54,8 @@ spec:
         volumeMounts:
           - mountPath: /var/lib/grafana
             name: grafana-storage
+          - mountPath: /var/lib/grafana2
+            name: grafana-storage2
       volumes:
         - name: grafana-storage
           persistentVolumeClaim:
